@@ -1,139 +1,114 @@
 package com.sprint.mission.discodeit.service.basic;
 
-import com.sprint.mission.discodeit.dto.data.UserDto;
-import com.sprint.mission.discodeit.dto.request.BinaryContentCreateRequest;
-import com.sprint.mission.discodeit.dto.request.UserCreateRequest;
-import com.sprint.mission.discodeit.dto.request.UserUpdateRequest;
+import java.io.IOException;
+import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
+import javax.transaction.Transactional;
+
+import com.sprint.mission.discodeit.service.UserService;
+import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
+
 import com.sprint.mission.discodeit.entity.BinaryContent;
 import com.sprint.mission.discodeit.entity.User;
-import com.sprint.mission.discodeit.entity.UserStatus;
+import com.sprint.mission.discodeit.exception.BadRequestException;
 import com.sprint.mission.discodeit.repository.BinaryContentRepository;
+import com.sprint.mission.discodeit.service.StorageService;
 import com.sprint.mission.discodeit.repository.UserRepository;
-import com.sprint.mission.discodeit.repository.UserStatusRepository;
-import com.sprint.mission.discodeit.service.UserService;
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
+import com.sprint.mission.discodeit.service.dto.UserDto;
+import com.sprint.mission.discodeit.service.request.UserCreateRequest;
+import com.sprint.mission.discodeit.service.request.UserUpdateRequest;
 
-import java.time.Instant;
-import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.Optional;
-import java.util.UUID;
-
-@RequiredArgsConstructor
 @Service
-public class BasicUserService implements UserService {
+public class BasicUserService<StorageService> implements UserService {
+
     private final UserRepository userRepository;
-    //
+    private final PasswordEncoder passwordEncoder;
+    private final StorageService binaryContentStorage;
     private final BinaryContentRepository binaryContentRepository;
-    private final UserStatusRepository userStatusRepository;
 
-    @Override
-    public User create(UserCreateRequest userCreateRequest, Optional<BinaryContentCreateRequest> optionalProfileCreateRequest) {
-        String username = userCreateRequest.username();
-        String email = userCreateRequest.email();
-
-        if (userRepository.existsByEmail(email)) {
-            throw new IllegalArgumentException("User with email " + email + " already exists");
-        }
-        if (userRepository.existsByUsername(username)) {
-            throw new IllegalArgumentException("User with username " + username + " already exists");
-        }
-
-        UUID nullableProfileId = optionalProfileCreateRequest
-                .map(profileRequest -> {
-                    String fileName = profileRequest.fileName();
-                    String contentType = profileRequest.contentType();
-                    byte[] bytes = profileRequest.bytes();
-                    BinaryContent binaryContent = new BinaryContent(fileName, (long)bytes.length, contentType, bytes);
-                    return binaryContentRepository.save(binaryContent).getId();
-                })
-                .orElse(null);
-        String password = userCreateRequest.password();
-
-        User user = new User(username, email, password, nullableProfileId);
-        User createdUser = userRepository.save(user);
-
-        Instant now = Instant.now();
-        UserStatus userStatus = new UserStatus(createdUser.getId(), now);
-        userStatusRepository.save(userStatus);
-
-        return createdUser;
+    public BasicUserService(UserRepository userRepository,
+                            PasswordEncoder passwordEncoder,
+                            StorageService binaryContentStorage,
+                            BinaryContentRepository binaryContentRepository) {
+        this.userRepository = userRepository;
+        this.passwordEncoder = passwordEncoder;
+        this.binaryContentStorage = binaryContentStorage;
+        this.binaryContentRepository = binaryContentRepository;
     }
 
+    @Transactional
     @Override
-    public UserDto find(UUID userId) {
-        return userRepository.findById(userId)
-                .map(this::toDto)
-                .orElseThrow(() -> new NoSuchElementException("User with id " + userId + " not found"));
+    public UserDto create(UserCreateRequest request, MultipartFile profile) throws IOException {
+        if (userRepository.existsByEmail(request.email())) {
+            throw new BadRequestException("email", request.email());
+        }
+
+        String encPwd = passwordEncoder.encode(request.password());
+        BinaryContent bc = null;
+        if (profile != null && !profile.isEmpty()) {
+            bc = BinaryContent.builder()
+                .id(UUID.randomUUID())
+                .fileName(profile.getOriginalFilename())
+                .size(profile.getSize())
+                .contentType(profile.getContentType())
+                .bytes(profile.getBytes())
+                .build();
+            binaryContentStorage.put(bc.getId(), profile.getBytes());
+            binaryContentRepository.save(bc);
+        }
+
+        User u = User.builder()
+            .username(request.username())
+            .email(request.email())
+            .password(encPwd)
+            .profile(bc)
+            .build();
+
+        userRepository.save(u);
+        return UserDto.from(u);
     }
 
     @Override
     public List<UserDto> findAll() {
-        return userRepository.findAll()
-                .stream()
-                .map(this::toDto)
-                .toList();
+        return userRepository.findAll().stream()
+            .map(UserDto::from)
+            .collect(Collectors.toList());
     }
 
+    @Transactional
     @Override
-    public User update(UUID userId, UserUpdateRequest userUpdateRequest, Optional<BinaryContentCreateRequest> optionalProfileCreateRequest) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new NoSuchElementException("User with id " + userId + " not found"));
+    public UserDto update(UUID userId, UserUpdateRequest request, MultipartFile profile) throws IOException {
+        User u = userRepository.findById(userId)
+            .orElseThrow(() -> new NotFoundException("User", userId.toString()));
 
-        String newUsername = userUpdateRequest.newUsername();
-        String newEmail = userUpdateRequest.newEmail();
-        if (userRepository.existsByEmail(newEmail)) {
-            throw new IllegalArgumentException("User with email " + newEmail + " already exists");
-        }
-        if (userRepository.existsByUsername(newUsername)) {
-            throw new IllegalArgumentException("User with username " + newUsername + " already exists");
+        if (request.newEmail() != null && !request.newEmail().equals(u.getEmail())
+            && userRepository.existsByEmail(request.newEmail())) {
+            throw new BadRequestException("email", request.newEmail());
         }
 
-        UUID nullableProfileId = optionalProfileCreateRequest
-                .map(profileRequest -> {
-                    Optional.ofNullable(user.getProfileId())
-                                    .ifPresent(binaryContentRepository::deleteById);
+        BinaryContent newBc = u.getProfile();
+        if (profile != null && !profile.isEmpty()) {
+            newBc = BinaryContent.builder()
+                .id(UUID.randomUUID())
+                .fileName(profile.getOriginalFilename())
+                .size(profile.getSize())
+                .contentType(profile.getContentType())
+                .bytes(profile.getBytes())
+                .build();
+            binaryContentStorage.put(newBc.getId(), profile.getBytes());
+            binaryContentRepository.save(newBc);
+        }
 
-                    String fileName = profileRequest.fileName();
-                    String contentType = profileRequest.contentType();
-                    byte[] bytes = profileRequest.bytes();
-                    BinaryContent binaryContent = new BinaryContent(fileName, (long) bytes.length, contentType, bytes);
-                    return binaryContentRepository.save(binaryContent).getId();
-                })
-                .orElse(null);
-
-        String newPassword = userUpdateRequest.newPassword();
-        user.update(newUsername, newEmail, newPassword, nullableProfileId);
-
-        return userRepository.save(user);
-    }
-
-    @Override
-    public void delete(UUID userId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new NoSuchElementException("User with id " + userId + " not found"));
-
-        Optional.ofNullable(user.getProfileId())
-                        .ifPresent(binaryContentRepository::deleteById);
-        userStatusRepository.deleteByUserId(userId);
-
-        userRepository.deleteById(userId);
-    }
-
-    private UserDto toDto(User user) {
-        Boolean online = userStatusRepository.findByUserId(user.getId())
-                .map(UserStatus::isOnline)
-                .orElse(null);
-
-        return new UserDto(
-                user.getId(),
-                user.getCreatedAt(),
-                user.getUpdatedAt(),
-                user.getUsername(),
-                user.getEmail(),
-                user.getProfileId(),
-                online
+        u.update(
+            request.newUsername(),
+            request.newEmail(),
+            request.newPassword() != null ? passwordEncoder.encode(request.newPassword()) : null,
+            newBc
         );
+        userRepository.save(u);
+        return UserDto.from(u);
     }
 }
